fix(client): board alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,7 @@
 .layout-container {
   width: 100%;
   background-color: #0e0121;
+  /* height: 100vh; */
 }
 
 .mobile-header {
@@ -41,7 +42,7 @@
   background: linear-gradient(180deg, #2dccfd 0%, #ff01ff 100%);
   overflow: hidden;
   border-radius: 16px;
-  height: 100%;
+  max-height: 100%;
 }
 
 .sidebar > div > div {
